--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
-  "name": "Blood Link",
-  "short_name": "BloodLink",
-  "start_url": "/Blood-link/",
+  "name": "NearBlood",
+  "short_name": "NearBlood",
+  "start_url": "/NearBlood/",
   "display": "standalone",
   "theme_color": "#0d6efd",
   "background_color": "#ffffff",
   "icons": [
     {
-      "src": "/Blood-link/img.png",
+      "src": "/NearBlood/img.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/Blood-link/img.png",
+      "src": "/NearBlood/img.png",
       "sizes": "512x512",
       "type": "image/png"
     }
